# inferneo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  batching_throughput.py  continuous_batching_demo.py  offline_throughput.py  openai_load.py  serve_benchmark.py
benchmarks/baselines/: hf_padded_engine.py
examples/: offline_inference.py
examples/basic/: real_inference.py
inferneo/: __init__.py  config.py  outputs.py  sampling_params.py
inferneo/attention/: flashinfer_backend.py  interface.py  sdpa_backend.py  selector.py
inferneo/core/: config.py  continuous_batching.py
inferneo/engine/: __init__.py  async_engine.py  engine.py  interfaces.py  llm.py  request.py  scheduler.py  trace.py
inferneo/executor/: cuda_graph.py  torch_runner.py
inferneo/inputs/: __init__.py  processor.py  types.py
inferneo/kv/: __init__.py  block_manager.py  block_pool.py  hashing.py
inferneo/models/: layers.py  llama.py  llava.py  loader.py  qwen.py  registry.py
inferneo/sampling/: sampler.py
inferneo/server/: api_server.py  cli.py  protocol.py
inferneo/tokenizer/: tokenizer.py
tests/: conftest.py
tests/correctness/: test_cuda_graph.py  test_flashinfer_vs_sdpa.py  test_vs_hf.py
tests/e2e/: test_openai_api.py
tests/unit/: test_block_manager.py  test_block_pool.py  test_detokenizer.py  test_qwen.py  test_rope_scaling.py  test_sampler.py  test_scheduler.py  test_torch_free.py
